test/libsolidity/syntaxTests/dataLocations/function_argument_location_specifier_test_library.sol
library test {
    function f(bytes calldata) public;
}
// ----
// TypeError: (30-35): Location cannot be calldata for non-external functions (remove the "calldata" keyword).
